--- a/doze/AndroidManifest.xml
+++ b/doze/AndroidManifest.xml
@@ -40,6 +40,8 @@
             <meta-data
                 android:name="com.android.settings.icon"
                 android:resource="@drawable/ic_settings_doze" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/ambient_display_dashboard_summary" />
         </activity>
 
     </application>
