--- a/doze/AndroidManifest.xml
+++ b/doze/AndroidManifest.xml
@@ -9,8 +9,8 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <uses-sdk
-        android:minSdkVersion="21"
-        android:targetSdkVersion="21"/>
+        android:minSdkVersion="26"
+        android:targetSdkVersion="26"/>
 
     <application
         android:label="OnyxDoze"
@@ -30,16 +30,13 @@
         <activity
             android:name=".WakeUpGestureSettings"
             android:label="@string/screen_gestures_panel_title"
-            android:theme="@android:style/Theme.Material.Settings">
+            android:theme="@android:style/Theme.DeviceDefault.Settings">
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
             </intent-filter>
             <meta-data
                 android:name="com.android.settings.category"
-                android:value="com.android.settings.category.device" />
-            <meta-data
-                android:name="com.android.settings.icon"
-                android:resource="@drawable/ic_settings_gestures" />
+                android:value="com.android.settings.category.ia.display" />
             <meta-data android:name="com.android.settings.summary"
                 android:resource="@string/screen_gestures_panel_dashboard_summary" />
         </activity>
